[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/GameSystems/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="CanvasLayer" groups=["DeleteOnChangeScene"]]
script = ExtResource( 1 )

[node name="AllEllements" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterElements" type="CenterContainer" parent="AllEllements"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ButtonContainer" type="VBoxContainer" parent="AllEllements/CenterElements"]
margin_left = 474.0
margin_top = 246.0
margin_right = 549.0
margin_bottom = 354.0
custom_constants/separation = 10
alignment = 1

[node name="PlayButton" type="Button" parent="AllEllements/CenterElements/ButtonContainer"]
margin_right = 75.0
margin_bottom = 20.0
focus_mode = 0
enabled_focus_mode = 0
text = "COMEÇAR"

[node name="HSeparator" type="HSeparator" parent="AllEllements/CenterElements/ButtonContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 30.0
margin_right = 75.0
margin_bottom = 34.0

[node name="Credits Button" type="Button" parent="AllEllements/CenterElements/ButtonContainer"]
margin_top = 44.0
margin_right = 75.0
margin_bottom = 64.0
focus_mode = 0
enabled_focus_mode = 0
text = "CRÉDITOS"

[node name="HSeparator2" type="HSeparator" parent="AllEllements/CenterElements/ButtonContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 74.0
margin_right = 75.0
margin_bottom = 78.0

[node name="QuitButton" type="Button" parent="AllEllements/CenterElements/ButtonContainer"]
margin_top = 88.0
margin_right = 75.0
margin_bottom = 108.0
focus_mode = 0
enabled_focus_mode = 0
text = "SAIR"

[node name="Panel" type="Panel" parent="AllEllements/CenterElements"]
margin_left = 512.0
margin_top = 300.0
margin_right = 512.0
margin_bottom = 300.0

[connection signal="pressed" from="AllEllements/CenterElements/ButtonContainer/PlayButton" to="." method="_start_new_game"]
[connection signal="pressed" from="AllEllements/CenterElements/ButtonContainer/Credits Button" to="." method="_go_to_credits"]
[connection signal="pressed" from="AllEllements/CenterElements/ButtonContainer/QuitButton" to="." method="_close_app"]
